--- a/first-network/crypto-config.yaml
+++ b/first-network/crypto-config.yaml
@@ -10,13 +10,24 @@ OrdererOrgs:
   # ---------------------------------------------------------------------------
   # Orderer
   # ---------------------------------------------------------------------------
-  - Name: Orderer
-    Domain: example.com
+  - Name: Orderer1
+    Domain: ord1.example.com
     # ---------------------------------------------------------------------------
     # "Specs" - See PeerOrgs below for complete description
     # ---------------------------------------------------------------------------
-    Specs:
-      - Hostname: orderer
+    #Specs:
+      #- Hostname: orderer
+    Template:
+      Count: 2
+  - Name: Orderer2
+    Domain: ord2.example.com
+    # ---------------------------------------------------------------------------
+    # "Specs" - See PeerOrgs below for complete description
+    # ---------------------------------------------------------------------------
+    #Specs:
+      #- Hostname: orderer
+    Template:
+      Count: 2
 # ---------------------------------------------------------------------------
 # "PeerOrgs" - Definition of organizations managing peer nodes
 # ---------------------------------------------------------------------------
