--- a/first-network/docker-compose-org3.yaml
+++ b/first-network/docker-compose-org3.yaml
@@ -5,15 +5,22 @@
 
 version: '2'
 
-volumes:
-  peer0.org3.example.com:
-  peer1.org3.example.com:
+# volumes:
+#   peer0.org3.example.com:
+#   peer1.org3.example.com:
 
 networks:
   byfn:
 
 services:
-
+  orderer0.ord3.example.com:
+    extends:
+      file:   base/docker-compose-base.yaml
+      service: orderer0.ord3.example.com
+    container_name: orderer0.ord3.example.com
+    networks:
+      - byfn
+      
   peer0.org3.example.com:
     container_name: peer0.org3.example.com
     extends:
@@ -28,7 +35,7 @@ services:
         - /var/run/:/host/var/run/
         - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/msp:/etc/hyperledger/fabric/msp
         - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer0.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer0.org3.example.com:/var/hyperledger/production
+        #- peer0.org3.example.com:/var/hyperledger/production
     ports:
       - 11051:7051
       - 11053:7053
@@ -50,7 +57,7 @@ services:
         - /var/run/:/host/var/run/
         - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/msp:/etc/hyperledger/fabric/msp
         - ./org3-artifacts/crypto-config/peerOrganizations/org3.example.com/peers/peer1.org3.example.com/tls:/etc/hyperledger/fabric/tls
-        - peer1.org3.example.com:/var/hyperledger/production
+        #- peer1.org3.example.com:/var/hyperledger/production
     ports:
       - 12051:7051
       - 12053:7053
