增加了systemchain 作为cbc的测试

--- a/first-network/configtx.yaml
+++ b/first-network/configtx.yaml
@@ -24,11 +24,14 @@ Profiles:
                 - *Orderer2
             Capabilities:
                 <<: *OrdererCapabilities
+        Application:
+            <<: *ApplicationDefaults
+            Organizations:
+                - *Org1
         Consortiums:
             SampleConsortium:
                 Organizations:
                     - *Org1
-                    - *Org2
     TwoOrgsChannel:
         Consortium: SampleConsortium
         Application:
