--- a/first-network/docker-compose-cli.yaml
+++ b/first-network/docker-compose-cli.yaml
@@ -165,21 +165,21 @@ services:
     networks:
       - byfn
 
-  peer0.org2.example.com:
-    container_name: peer0.org2.example.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer0.org2.example.com
-    networks:
-      - byfn
+  # peer0.org2.example.com:
+  #   container_name: peer0.org2.example.com
+  #   extends:
+  #     file:  base/docker-compose-base.yaml
+  #     service: peer0.org2.example.com
+  #   networks:
+  #     - byfn
 
-  peer1.org2.example.com:
-    container_name: peer1.org2.example.com
-    extends:
-      file:  base/docker-compose-base.yaml
-      service: peer1.org2.example.com
-    networks:
-      - byfn
+  # peer1.org2.example.com:
+  #   container_name: peer1.org2.example.com
+  #   extends:
+  #     file:  base/docker-compose-base.yaml
+  #     service: peer1.org2.example.com
+  #   networks:
+  #     - byfn
 
   cli:
     container_name: cli
@@ -212,7 +212,7 @@ services:
       - orderer0.ord2.example.com
       - peer0.org1.example.com
       - peer1.org1.example.com
-      - peer0.org2.example.com
-      - peer1.org2.example.com
+      # - peer0.org2.example.com
+      # - peer1.org2.example.com
     networks:
       - byfn
