--- a/first-network/configtx.yaml
+++ b/first-network/configtx.yaml
@@ -41,6 +41,15 @@ Profiles:
                 - *Org2
             Capabilities:
                 <<: *ApplicationCapabilities
+    Org3OrgsChannel:
+        Consortium: SampleConsortium
+        Application:
+            <<: *ApplicationDefaults
+            Organizations:
+                - *Org1
+                - *Org3
+            Capabilities:
+                <<: *ApplicationCapabilities
 
 ################################################################################
 #
@@ -111,7 +120,22 @@ Organizations:
             # encoded in the genesis block in the Application section context
             - Host: peer0.org2.example.com
               Port: 7051
+    - &Org3
+        # DefaultOrg defines the organization which is used in the sampleconfig
+        # of the fabric.git development environment
+        Name: Org3MSP
 
+        # ID to load the MSP definition as
+        ID: Org3MSP
+
+        MSPDir: org3-artifacts/crypto-config/peerOrganizations/org3.example.com/msp
+
+        AnchorPeers:
+            # AnchorPeers defines the location of peers which can be used
+            # for cross org gossip communication.  Note, this value is only
+            # encoded in the genesis block in the Application section context
+            - Host: peer0.org3.example.com
+              Port: 7051
 ################################################################################
 #
 #   SECTION: Orderer
